Fixed list spacing issue

--- a/jedapps/v1/css/client.css
+++ b/jedapps/v1/css/client.css
@@ -984,3 +984,6 @@ padding-left: 0px;
 .hidden {
 	display: none;
 }
+div.list-view-container hr {
+	display: none;
+}
